--- a/src/docs/components/clickOutside.mdx
+++ b/src/docs/components/clickOutside.mdx
@@ -35,7 +35,7 @@ In addition an ignored list of refs can be provided which, when clicked, will no
                 onClickOutside={handleClickOutside}
                 ignoreClickOutsideRefs={ignoreListRefs}
             >
-                <Button>Click Inside</Button>
+                <Button style={{margin: "8px"}}>Click Inside</Button>
             </ClickOutside>
         </>
     );
