--- a/src/docs/components/animatedMonthGroup.mdx
+++ b/src/docs/components/animatedMonthGroup.mdx
@@ -8,7 +8,7 @@ import useMediaQuery from "@material-ui/core/useMediaQuery/useMediaQuery";
 import { useTheme } from "@material-ui/core/styles";
 import { AnimatedMonthGroup, CalendarProvider } from "@use-date-input/core";
 import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
-import { DemoContent, DemoContentSmall } from "../../gatsby-theme-docz/components/DemoContent";
+import { DemoContent, DemoContentXSmall } from "../../gatsby-theme-docz/components/DemoContent";
 import { Button } from "../../gatsby-theme-docz/components/Button";
 import { ButtonBar } from "../../gatsby-theme-docz/components/ButtonBar";
 
@@ -23,7 +23,7 @@ scroll movement between columns based on the changes to `visibleFromDate`.
 {() => {
     const theme = useTheme();
     const isSmallBreakpoint = useMediaQuery(theme.breakpoints.down("sm"));
-    const AddYourComponentHere = isSmallBreakpoint ? DemoContentSmall : DemoContent; 
+    const AddYourComponentHere = isSmallBreakpoint ? DemoContentXSmall : DemoContent; 
     const { createDate, addMonths, subtractMonths } = dateAdapter();
     const [ visibleFromDate, setVisibleFromDate ] = useState(createDate());
     const column1Ref = useRef();
@@ -53,7 +53,7 @@ scroll movement between columns based on the changes to `visibleFromDate`.
                 <Button onClick={handlePreviousQuarterClick}>{isSmallBreakpoint ? '-3' : 'Prevous Quarter'}</Button>
                 <Button onClick={handleNextQuarterClick}>{isSmallBreakpoint ? '+3' : 'Next Quarter'}</Button>
             </ButtonBar>
-            <div style={{ width }}>
+            <div style={{ width, padding: "8px" }}>
                 <AnimatedMonthGroup firstColumnRef={column1Ref} groupRef={groupRef} visibleFromDate={visibleFromDate}>
                     <div ref={groupRef}>
                         <AddYourComponentHere style={{display: "inline-flex"}} ref={column1Ref}>Column 1</AddYourComponentHere>
