docs: improve grammar of date range home page

--- a/src/docs/home.mdx
+++ b/src/docs/home.mdx
@@ -46,7 +46,7 @@ import { Hero6 } from "../gatsby-theme-docz/components/Hero6";
     href="https://mark-tate.github.io/use-date-input/useDateRangeInput"
     linkText="Show Me"
     title="useDateRangeInput Hook"
-    description="Compose with an input for date ranges"
+    description="Compose with multiple inputs for date ranges"
   >
     <Hero4 />
   </HeroWrapper>
