docs: correct the path to cross.svg

--- a/src/docs/components/calendar.mdx
+++ b/src/docs/components/calendar.mdx
@@ -144,7 +144,7 @@ Block out dates using a custom renderer and the `isDayDisabled` prop.
     const numOfColumns = isSmallBreakpoint ? 2 : 4;
     const numOfVisibleMonths = isSmallBreakpoint ? 2 : 12;
     const UnavailableDay = styled(Day)(props => ({
-        background: 'url("/public/cross.svg")',
+        background: 'url("/use-date-input/public/cross.svg")',
         backgroundRepeat: "no-repeat",
         backgroundPosition: "bottom 6px right 5px",
         backgroundSize: "50% 50%, auto"
