--- a/src/docs/composition.mdx
+++ b/src/docs/composition.mdx
@@ -69,7 +69,7 @@ extend the current `Day` component
     // import { Calendar, Day } from "@use-date-input/core";
     const MONDAY = 1;
     const UnavailableDay = styled(Day)(props => ({
-        background: 'url("/public/cross.svg")',
+        background: 'url("/use-date-input/public/cross.svg")',
         backgroundRepeat: "no-repeat",
         backgroundPosition: "bottom 6px right 5px",
         backgroundSize: "50% 50%, auto"
